--- a/lang/en.json
+++ b/lang/en.json
@@ -719,7 +719,7 @@
             "Next to Publish >": "Next to Publish >"
         },
         "add-video": {
-            "Paste YouTube video URLs to add (separate with different lines)": "Paste YouTube video URLs to add (separate with different lines)",
+            "Paste YouTube or Vimeo video URLs to add (separate with different lines)": "Paste YouTube or Vimeo video URLs to add (separate with different lines)",
             "Paste YouTube video URLs to add.": "Paste YouTube video URLs to add.",
             "You have reached the maximum amount of 50 videos.": "You have reached the maximum amount of 50 videos.",
             "Invalid URL, please try again.": "Invalid URL, please try again.",
