--- a/lang/zh.json
+++ b/lang/zh.json
@@ -903,6 +903,7 @@
             "Next to Publish >": "前往發佈設定 >"
         },
         "add-video": {
+            "We don't support multiple video sources in one episode. Please import the same video source as the first one.": "不支援來自不同影音平台的影片。請輸入相同影音平台的影片。",
             "Paste YouTube or Vimeo video URLs to add (separate with different lines)": "輸入YouTube 或 Vimeo 影片連結(用換行區隔不同連結)",
             "Paste YouTube video URLs to add.": "請先輸入YouTube影片連結。",
             "You have reached the maximum amount of 50 videos.": "您加入的影片已達50個上限。",
