在 Flipr X 大量節目編排下，會出現以30分鐘為播放單位的節目，每小時發佈節目已不符合使用需求，需新增半小時的單位選項。

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -873,6 +873,7 @@
             "Scheduled to rerun": "排程重播",
             "This episode will be published again as the latest episode at the scheduled time.": "此劇集將於排程時間自動<br />再度發佈為最新劇集。",
             "Hour": "時間",
+            "Minute": "分",
             "< Back to Curation": "< 回策展編輯",
             "Leave": "離開",
             "Save": "儲存",
