--- a/lang/en.json
+++ b/lang/en.json
@@ -439,6 +439,7 @@
             "No Episodes": "No Episodes",
             "'s Favorite": "'s Favorite",
             "You don't have any programs yet": "You don't have any programs yet",
+            "Your search - [xxx] didn't match any programs.": "Your search - [<span>{0}</span>] didn't match any programs.",
             "Create a new program": "Create a new program",
             "Create your own <strong>personal and unique</strong> program.": "Create your own <strong>personal and unique</strong> program.",
             "Add online videos into episode and start to <strong>curate your own program.</strong>": "Add online videos into episode and start to <strong>curate your own program.</strong>",
