update language string css padding

--- a/lang/zh.json
+++ b/lang/zh.json
@@ -509,6 +509,7 @@
         },
         "title-func": {
             "My Programs": "節目管理",
+            "Search program": "搜尋節目",
             "Reorder programs": "排序節目",
             "Save order": "儲存排序",
             "Create a new program": "創建節目",
