bug fix #12578 【麵包穴入徑】 Hyper Link 超連結節目 --> 超連結
【說明文字】
User can go to watch another FLIPr.tv program or episode.
改成
You can promote the video content by setting the image or text commercials.

使用者可前往觀賞另一個 FLIPr.tv 節目或劇集
改成
設置與影片相關的圖片或文字廣告連結，推廣您的內容！

【表單】
Display --> Type
類型

Text
文字

Image
圖片

Upload
上傳

Input button text
改成
Input text

輸入按鈕文字
改成
輸入文字

--- a/lang/en.json
+++ b/lang/en.json
@@ -776,7 +776,7 @@
             "Choose a type": "Choose a type",
             "Hyper Link": "Hyper Link",
             "Poll": "Poll",
-            "User can go to watch another FLIPr.tv program or episode.": "User can go to watch another FLIPr.tv program or episode.",
+            "You can promote the video content by setting the image or text commercials.": "You can promote the video content by setting the image or text commercials.",
             "Scheduled Notification": "Scheduled Notification",
             "Send a scheduled notification to user to get more information.": "Send a scheduled notification to user to get more information.",
             "Instant Notification": "Instant Notification",
