--- a/lang/zh.json
+++ b/lang/zh.json
@@ -963,25 +963,29 @@
             "Duration overlaps another POI's duration:": "設定時間與另一個互動時間點重疊:",
             "Add interactive event": "設定互動事件",
             "Choose a type": "選擇事件類型",
-            "Hyper Link": "超連結節目",
+            "Hyper Link": "超連結",
             "Poll": "投票",
-            "User can go to watch another FLIPr.tv program or episode.": "使用者可前往觀賞另一個FLIPr.tv節目或劇集。",
+            "You can promote the video content by setting the image or text commercials.": "設置與影片相關的圖片或文字廣告連結，推廣您的內容！",
             "Scheduled Notification": "排程通知",
             "Send a scheduled notification to user to get more information.": "設定排程通知，使用者可於特定時間獲得更多資訊。",
             "Instant Notification": "即時通知",
             "Send an instant notification to user to get more information.": "設定即時通知，使用者可即時獲得更多資訊。",
             "POI": "互動時間點",
-            "Interactive event : Hyper Link": "互動事件 : 超連結節目",
+            "Interactive event : Hyper Link": "互動事件 : 超連結",
             "Interactive event : Scheduled Notification": "互動事件 : 排程通知",
             "Interactive event : Instant Notification": "互動事件 : 即時通知",
             "Interactive event : Poll": "互動事件 : 投票",
             "PREVIEW": "預覽畫面",
             "There is no valid video to preview.": "找不到可有效預覽的畫面。",
+            "Type": "類型",
+            "Text": "文字",
+            "Image": "圖片",
             "Display text": "訊息文字",
             "Input display text": "輸入訊息文字",
             "Button text": "按鈕文字",
             "Add button": "新增按鈕",
-            "Input button text": "輸入按鈕文字",
+            "Input text": "輸入文字",
+            "Upload image": "上傳圖片",
             "Hyper link": "連結網址",
             "Input URL": "輸入網址",
             "Invalid URL, please try again.": "網址設定有誤，請重試。",
